// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches snapshots > changes variant 1`] = `
<DocumentFragment>
  <button
    class="sc-eCAqax sc-jSFipO iFCWcu aje-btn aje-btn--secondary"
    type="button"
  >
    Click Me
  </button>
</DocumentFragment>
`;

exports[`matches snapshots > loading completed state 1`] = `
<DocumentFragment>
  <button
    aria-label="loading"
    class="sc-eCAqax sc-jSFipO iFCWcu aje-btn aje-btn--primary is-loading"
    type="button"
  >
    <div
      class="sc-bdnyFh xtELr aje-spinner"
    >
      <span
        class="sc-hKFymg joaTQl"
      />
    </div>
    Click Me
  </button>
</DocumentFragment>
`;

exports[`matches snapshots > loading state 1`] = `
<DocumentFragment>
  <button
    aria-label="loading"
    class="sc-eCAqax sc-jSFipO iFCWcu aje-btn aje-btn--primary is-loading"
    type="button"
  >
    <div
      class="sc-bdnyFh xtELr aje-spinner"
    >
      <svg
        class="sc-gtsqUy fELEhR circular-loader"
        data-testid="spinner-svg"
        viewBox="25 25 50 50"
      >
        <circle
          class="sc-dlniIP jXXXQL loader-path"
          cx="50"
          cy="50"
          fill="none"
          r="20"
        />
      </svg>
    </div>
    Click Me
  </button>
</DocumentFragment>
`;

exports[`matches snapshots > normal display 1`] = `
<DocumentFragment>
  <button
    class="sc-eCAqax sc-jSFipO iFCWcu aje-btn aje-btn--primary"
    type="button"
  >
    Click Me
  </button>
</DocumentFragment>
`;
